# broken-pipeline

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: arrow_targets.cmake  broken_pipelineConfig.cmake.in  deps.cmake  install.cmake  package_config.cmake.in  testing.cmake
cmake/find/: arrow.cmake  gtest.cmake
cmake/testing/: testing.cmake
conda/: broken-pipeline-dev.yml
examples/arrow-common/: main.cpp
examples/broken-pipeline-arrow/: CMakeLists.txt  README.md
examples/broken-pipeline-arrow/src/: arrow_op.h  arrow_traits.h  main.cpp
examples/broken_pipeline-arrow/: CMakeLists.txt  README.md
examples/broken_pipeline-arrow/src/: arrow_op.h  arrow_traits.h  main.cpp
examples/broken_pipeline_arrow/: CMakeLists.txt  README.md
examples/broken_pipeline_arrow/src/: arrow_op.h  arrow_traits.h  main.cpp
examples/bundled-arrow/: CMakeLists.txt  README.md  main.cpp
examples/opl-arrow/: CMakeLists.txt  README.md
examples/opl-arrow/src/: arrow_op.h  arrow_traits.h  demo_ops.h  main.cpp
examples/system-arrow/: CMakeLists.txt  README.md
include/: arrow_traits.h
include/broken_pipeline/: broken_pipeline.h  concepts.h  operator.h  pipeline.h  pipeline_exec.h  result.h  task.h  types.h
include/broken_pipeline/schedule/: arrow_traits.h  async_awaiter.h  async_dual_pool_scheduler.h  async_resumer.h  naive_parallel_scheduler.h  parallel_coro_scheduler.h  schedule_context.h  scheduler.h  sequential_coro_scheduler.h  sync_awaiter.h  sync_resumer.h  traits.h
include/broken_pipeline/schedule/detail/: callback_resumer.h  conditional_awaiter.h  conditonal_awaiter.h  coro_awaiter.h  coro_resumer.h  future_awaiter.h  single_thread_awaiter.h  single_thread_resumer.h
include/broken_pipeline/traits/: arrow.h
include/broken_pipeline_schedule/: async_dual_pool_scheduler.h  async_resumer.h  naive_parallel_scheduler.h  schedule_context.h  scheduler.h  sync_awaiter.h  sync_resumer.h
include/openpipeline/: compile.h  concepts.h  op.h  openpipeline.h  pipeline.h  task.h
include/openpipeline/common/: meta.h
include/openpipeline/detail/: compile_pipeline.h  physical_pipeline.h  pipeline_exec.h  pipeline_task.h  sub_pipeline.h
include/openpipeline/op/: op.h  op_output.h
include/openpipeline/pipeline/: compile.h  compile_pipeline.h  logical_pipeline.h  op.h  op_output.h  physical_pipeline.h  pipeline.h
include/openpipeline/pipeline/detail/: compile_pipeline.h  physical_pipeline.h  pipeline_task.h
include/openpipeline/task/: awaiter.h  resumer.h  task.h  task_context.h  task_group.h  task_status.h
include/opl/: compile.h  concepts.h  op.h  operator.h  opl.h  pipeline.h  pipeline_exec.h  task.h
include/opl/detail/: compile_pipeline.h  pipeline_exec.h  sub_pipeline.h
src/schedule/: CMakeLists.txt  async_awaiter.cpp  async_dual_pool_scheduler.cpp  conditional_awaiter.cpp  conditonal_awaiter.cpp  coro_awaiter.cpp  future_awaiter.cpp  naive_parallel_scheduler.cpp  parallel_coro_scheduler.cpp  scheduler.cpp  sequential_coro_scheduler.cpp  single_thread_awaiter.cpp  single_thread_resumer.cpp  sync_awaiter.cpp
tests/: CMakeLists.txt  broken_pipeline_pipeline_compile_test.cpp  broken_pipeline_pipeline_task_test.cpp  opl_arrow_smoke_test.cpp  opl_pipeline_compile_test.cpp  opl_pipeline_exec_smoke_test.cpp  opl_pipeline_task_test.cpp  opl_task_test.cpp  pipe_exec_test.cpp  pipeline_compile_test.cpp  pipeline_task_test.cpp  task_test.cpp  test_scheduler.cpp
tests/include/: arrow_traits.h  test_scheduler.h
tests/schedule/: CMakeLists.txt  async_awaiter.cpp  async_awaiter.h  async_dual_pool_scheduler.cpp  async_dual_pool_scheduler.h  async_resumer.h  async_resumer_awaiter_test.cpp  conditional_awaiter_test.cpp  conditonal_awaiter_test.cpp  coro_awaiter_test.cpp  future_awaiter_test.cpp  naive_parallel_scheduler.cpp  naive_parallel_scheduler.h  schedule_context.h  scheduler.cpp  scheduler.h  scheduler_test.cpp  single_thread_awaiter_test.cpp  sync_awaiter.cpp  sync_awaiter.h  sync_resumer.h  sync_resumer_awaiter_test.cpp
